Fix bugs so far in team meeting

--- a/Coup/Coup/Base.lproj/Main.storyboard
+++ b/Coup/Coup/Base.lproj/Main.storyboard
@@ -865,7 +865,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="O26-sb-GUD"/>
+        <segue reference="VFf-Q9-7mQ"/>
         <segue reference="IOS-6i-LvZ"/>
     </inferredMetricsTieBreakers>
     <resources>
