--- a/Coup/Coup/Base.lproj/Main.storyboard
+++ b/Coup/Coup/Base.lproj/Main.storyboard
@@ -95,7 +95,7 @@
                                                 <state key="normal" title="Login"/>
                                                 <connections>
                                                     <action selector="loginButtonPressed:" destination="WtE-Bv-kTN" eventType="touchUpInside" id="syY-aB-eYY"/>
-                                                    <segue destination="BYZ-38-t0r" kind="presentation" identifier="LoginToCoupSegueIdentifier" modalPresentationStyle="fullScreen" id="eLT-0f-lDQ"/>
+                                                    <segue destination="Wlh-Nc-3in" kind="presentation" identifier="LoginToCoupSegueIdentifier" modalPresentationStyle="fullScreen" id="MJA-de-aLj"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -133,7 +133,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sBw-wf-LZV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="949" y="-624"/>
+            <point key="canvasLocation" x="20" y="-635"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -406,21 +406,6 @@
             <point key="canvasLocation" x="3511" y="833"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="JcZ-KH-ffx">
-            <objects>
-                <viewController id="CGz-Vp-A3r" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="EmR-ww-04G">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="Xnt-Bs-9EX"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iv2-E6-N0L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2698" y="-624"/>
-        </scene>
-        <!--View Controller-->
         <scene sceneID="8S9-3J-qYx">
             <objects>
                 <viewController id="Auq-Mg-zAN" sceneMemberID="viewController">
@@ -550,6 +535,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Wlh-Nc-3in" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="DIJ-9k-M3G"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="0HA-h8-sZp">
                         <rect key="frame" x="0.0" y="44" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -866,7 +852,6 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="VFf-Q9-7mQ"/>
-        <segue reference="IOS-6i-LvZ"/>
     </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="systemBackgroundColor">
