--- a/Coup/Coup/Base.lproj/Main.storyboard
+++ b/Coup/Coup/Base.lproj/Main.storyboard
@@ -95,7 +95,6 @@
                                                 <state key="normal" title="Login"/>
                                                 <connections>
                                                     <action selector="loginButtonPressed:" destination="WtE-Bv-kTN" eventType="touchUpInside" id="syY-aB-eYY"/>
-                                                    <segue destination="Wlh-Nc-3in" kind="presentation" identifier="LoginToCoupSegueIdentifier" modalPresentationStyle="fullScreen" id="MJA-de-aLj"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -129,6 +128,7 @@
                         <outlet property="passwordTextField" destination="PE4-Qx-grR" id="HnS-WZ-nsL"/>
                         <outlet property="segCtrl" destination="SYq-wB-LWT" id="sk7-rC-ETP"/>
                         <outlet property="statusLabel" destination="IZJ-nL-ya0" id="TK9-Mi-yzV"/>
+                        <segue destination="Wlh-Nc-3in" kind="presentation" identifier="LoginToCoupSegueIdentifier" modalPresentationStyle="fullScreen" id="Gtn-8A-rwk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sBw-wf-LZV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
